# breast-cancer-mlops-showcase

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  nightly-retrain.yml  release.yml  train-smoke.yml
.hermes/plans/: 2026-06-07T012420Z-dashboard-drift-note.md  2026-06-07T054512Z-dashboard-drift-overview.md  2026-06-07T100000Z-compare-summary-note.md  2026-06-07T100000Z-dashboard-kfold-stability-note.md  2026-06-07_0018-hist-gradient-boosting-progress.md
configs/: quality_gates.yaml  train-coimbra-hist-gradient-boosting-kfold.yaml  train-coimbra-hist-gradient-boosting.yaml  train-coimbra-random-forest.yaml  train-digits-cnn.yaml  train-pytorch.yaml  train.yaml
docs/: architecture.md  model-designer-design.md  model-registry-refactor-design.md  run-designer-design.md
docs/source/: architecture.rst  artifacts.rst  conf.py  configuration.rst  dashboard.rst  datasets.rst  index.rst  installation.rst  mlflow-and-tracking.rst  usage.rst
docs/source/api/: index.rst
docs/source/howtos/: add-backend.rst  index.rst  inspect-mlflow.rst  run-inference.rst  train-models.rst  use-stratified-kfold.rst  validate-and-report.rst
sample-inputs/: sample.json
src/bc_mlops_showcase/: __init__.py  cli.py  config.py  data.py  designer.py  inference.py  kaggle.py  model_designer.py  modeling.py  pipeline.py  reporting.py  tracking.py  tui.py  validation.py
tests/: test_cli.py  test_config.py  test_designer.py  test_interactive_tui.py  test_kaggle.py  test_mlops_cli.py  test_model_designer.py  test_pipeline.py  test_reporting.py  test_training_backends.py  test_tui_dashboard.py
