[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "bc-mlops-showcase"
version = "0.2.0"
description = "End-to-end breast cancer classification showcase with CI/CD, DevOps, and extensible MLOps model backends"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Merlin", email = "merlin.swd@proton.me"}
]
dependencies = [
  "joblib>=1.4",
  "mlflow>=2.16",
  "numpy>=1.26",
  "pandas>=2.2",
  "PyYAML>=6.0",
  "scikit-learn>=1.5",
  "torch>=2.4",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pre-commit>=3.8",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]
docs = [
  "furo>=2024.8.6",
  "sphinx>=8.3",
  "sphinx-copybutton>=0.5.2",
  "sphinxcontrib-mermaid>=1.0.0",
]

[project.scripts]
bc-mlops = "bc_mlops_showcase.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bc_mlops_showcase"]

[tool.pytest.ini_options]
addopts = "-q --cov=bc_mlops_showcase --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv]
package = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
